# postgres-mcp

./: .coveragerc  README.md  main.py  pyproject.toml
.claude/skills/pg-query-gen/: SKILL.md
.claude/skills/pg-query-gen/references/: db_pg_mcp_large.md  db_pg_mcp_medium.md  db_pg_mcp_small.md
.github/workflows/: ci.yml
fixtures/: 01_small_database.sql  02_medium_database.sql  03_large_database.sql  Makefile  TEST_QUERIES.md
spec/: 0001-pg-mcp-prd.md  instructions.md
specs/: 0002-pg-mcp-design.md  0003-pg-mcp-impl-plan.md  0004-pg-mcp-code-review.md  0005-pg-mcp-test-plan.md  instructions.md  review_prompt.md
src/: __init__.py  __main__.py  config.py  main.py
src/models/: __init__.py  database.py  query.py  schema.py
src/services/: __init__.py  ai_client.py  database.py  metrics.py  multi_db.py  rate_limiter.py  resilience.py  schema.py  sql_validator.py
src/tools/: __init__.py  explain.py  query.py  schema.py
src/utils/: __init__.py  constants.py  exceptions.py
tests/: __init__.py  conftest.py  test_config.py  test_integration.py  test_metrics.py  test_models.py  test_resilience.py  test_security.py  test_sql_validator.py
